--- a/package.json
+++ b/package.json
@@ -19,7 +19,173 @@
     "eslint": "^6.2.2",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.56.0",
-    "react-test-renderer": "16.8.6"
+    "react-test-renderer": "16.8.6",
+    "@babel/plugin-proposal-decorators": "7.2.0",
+    "@mapbox/polyline": "0.2.0",
+    "@octokit/rest": "15.8.2",
+    "@welldone-software/why-did-you-render": "2.4.0",
+    "apollo-cache-inmemory": "1.3.12",
+    "apollo-client": "2.4.8",
+    "apollo-link": "1.2.6",
+    "apollo-link-context": "1.0.12",
+    "apollo-link-error": "1.1.5",
+    "apollo-link-http": "1.5.9",
+    "apollo-link-retry": "2.2.8",
+    "appcenter": "^2.3.0",
+    "appcenter-analytics": "^2.3.0",
+    "appcenter-crashes": "^2.3.0",
+    "async": "2.6.1",
+    "babel-cli": "6.24.1",
+    "babel-core": "6.26.3",
+    "babel-eslint": "8.2.6",
+    "babel-istanbul": "0.12.2",
+    "babel-jsxgettext": "0.5.0",
+    "babel-plugin-add-module-exports": "0.2.1",
+    "babel-plugin-functional-hmr": "1.0.24",
+    "babel-plugin-module-alias": "1.6.0",
+    "babel-plugin-module-resolver": "3.1.1",
+    "babel-plugin-styled-components": "1.10.0",
+    "babel-plugin-transform-decorators": "6.24.1",
+    "babel-plugin-transform-decorators-legacy": "1.3.5",
+    "babel-plugin-transform-remove-console": "6.9.4",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react-native": "4.0.0",
+    "babel-preset-stage-2": "6.24.1",
+    "babel-register": "6.24.1",
+    "base-64": "0.1.0",
+    "chai": "4.1.2",
+    "chalk": "2.4.1",
+    "code-push-cli": "2.1.8",
+    "config": "1.30.0",
+    "cookie": "0.3.1",
+    "creditcards": "3.0.1",
+    "deep-freeze": "0.0.1",
+    "del": "3.0.0",
+    "enzyme": "3.3.0",
+    "es6-error": "4.1.1",
+    "eslint-config-airbnb": "17.1.0",
+    "eslint-config-react-native": "3.0.0",
+    "eslint-import-resolver-babel-module": "4.0.0",
+    "eslint-plugin-flowtype": "2.50.0",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jsx-a11y": "6.1.1",
+    "eslint-plugin-react": "7.11.1",
+    "eslint-plugin-react-native": "3.2.1",
+    "events": "3.0.0",
+    "flow-bin": "0.51.0",
+    "flow-typed": "2.1.2",
+    "fuse.js": "3.2.1",
+    "geolib": "^2.0.24",
+    "github": "9.2.0",
+    "global": "4.3.2",
+    "graphql": "0.13.2",
+    "graphql-tag": "2.9.2",
+    "haversine": "1.1.0",
+    "hoist-non-react-statics": "3.0.1",
+    "http-server": "0.10.0",
+    "i18next": "11.5.0",
+    "intl": "1.2.5",
+    "invariant": "2.2.2",
+    "istanbul": "0.4.5",
+    "jest-cli": "20.0.4",
+    "jest-junit-reporter": "1.1.0",
+    "lodash": "4.17.11",
+    "mocha": "3.4.2",
+    "mocha-junit-reporter": "1.13.0",
+    "moment": "2.22.2",
+    "moment-timezone": "0.5.23",
+    "nock": "9.0.13",
+    "node-fetch": "1.7.1",
+    "normalizr": "3.2.3",
+    "prop-types": "15.6.2",
+    "react": "16.8.6",
+    "react-apollo": "2.1.6",
+    "react-dom": "16.6.3",
+    "react-fast-compare": "2.0.4",
+    "react-i18next": "7.10.1",
+    "react-mixin": "3.0.5",
+    "react-native": "^0.60.5",
+    "react-native-accessibility": "^1.0.9",
+    "react-native-awesome-card-io": "0.7.0",
+    "react-native-cached-image": "1.4.3",
+    "react-native-camera": "^3.3.0",
+    "react-native-circular-progress": "0.2.0",
+    "react-native-code-push": "5.3.4",
+    "react-native-config": "^0.11.7",
+    "react-native-deep-link": "0.2.3",
+    "react-native-device-info": "0.21.5",
+    "react-native-devsettings-android": "0.1.5",
+    "react-native-firebase": "^5.5.6",
+    "react-native-fs": "^2.14.1",
+    "react-native-geocoder": "0.5.0",
+    "react-native-geolocation-service": "1.1.0",
+    "react-native-gesture-handler": "^1.4.1",
+    "react-native-htmlview": "0.12.1",
+    "react-native-hyperlink": "0.0.14",
+    "react-native-image-picker": "0.27.1",
+    "react-native-image-resizer": "1.0.0",
+    "react-native-interactable": "wix/react-native-interactable#master",
+    "react-native-keyboard-aware-scroll-view": "0.7.1",
+    "react-native-maps": "0.24.2",
+    "react-native-mixpanel": "1.0.2",
+    "react-native-mock": "0.3.1",
+    "react-native-modal-datetime-picker": "6.0.0",
+    "react-native-nested-scroll-view": "8.0.0",
+    "react-native-offline": "3.15.2",
+    "react-native-parallax-view": "2.0.6",
+    "react-native-permissions": "1.1.1",
+    "react-native-picker": "4.3.7",
+    "react-native-qrcode-scanner": "1.1.2",
+    "react-native-qrcode-svg": "5.1.1",
+    "react-native-renderer": "15.5.3",
+    "react-native-safe-area-view": "0.9.0",
+    "react-native-scrollable-tab-view": "happypancake/react-native-scrollable-tab-view#master",
+    "react-native-section-list-get-item-layout": "2.2.3",
+    "react-native-sensitive-info": "5.2.9",
+    "react-native-shake": "3.2.4",
+    "react-native-simple-radio-button": "2.7.1",
+    "react-native-snap-carousel": "3.7.5",
+    "react-native-splash-screen": "3.2.0",
+    "react-native-storage": "0.2.2",
+    "react-native-svg": "9.3.6",
+    "react-native-swipeable": "0.6.0",
+    "react-native-swiper": "1.5.13",
+    "react-native-tab-view": "1.0.2",
+    "react-native-vector-icons": "4.6.0",
+    "react-native-video": "4.4.0",
+    "react-native-video-controls": "2.2.1",
+    "react-native-webview": "3.2.1",
+    "react-navigation": "3.0.9",
+    "react-navigation-props-mapper": "0.3.0",
+    "react-navigation-redux-helpers": "2.0.2",
+    "react-navigation-tabs": "0.5.1",
+    "react-number-format": "3.6.1",
+    "react-redux": "5.0.7",
+    "react-timer-mixin": "0.13.3",
+    "reactotron-react-native": "1.14.0",
+    "reactotron-redux": "1.13.0",
+    "reactotron-redux-saga": "1.13.0",
+    "recyclerlistview": "1.4.0-beta.5",
+    "redux": "4.0.0",
+    "redux-actions": "2.4.0",
+    "redux-devtools-extension": "2.13.5",
+    "redux-observable": "1.0.0",
+    "redux-persist": "5.10.0",
+    "redux-saga": "0.16.0",
+    "redux-thunk": "2.3.0",
+    "reselect": "3.0.1",
+    "rn-viewpager": "1.2.9",
+    "rxjs": "6.2.1",
+    "should": "11.2.1",
+    "sinon": "2.3.6",
+    "sinon-as-promised": "4.0.3",
+    "sinon-chai": "2.11.0",
+    "slack-node": "0.1.8",
+    "source-map": "0.5.6",
+    "styled-components": "3.3.3",
+    "warning": "3.0.0",
+    "with-query": "1.0.2",
+    "yargs": "8.0.2"
   },
   "jest": {
     "preset": "react-native"
